--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@ body{
     <a href= "https://en.wikipedia.org/wiki/Film_series">film franchise</a>—based on the<a href="https://en.wikipedia.org/wiki/Marvel_Comics"> Marvel Comics</a> character of the <a href= "https://en.wikipedia.org/wiki/Iron_Man">same name</a>—commonly known by his alter ego, <b>Iron Man</b>. In the films, Stark is an industrialist, genius inventor and hero who is <a href="https://en.wikipedia.org/wiki/Major_teams_and_organizations_of_the_Marvel_Cinematic_Universe#Stark_Industries">CEO of Stark Industries.</a> At the beginning of the series, he is a chief weapons manufacturer for the U.S. military, until he has a change of heart and redirects his technical knowledge into the creation of mechanized suits of armor which he uses to defend against those that would threaten peace around the world.
 Stark is one of the central figures of the MCU, having appeared in eleven films since his introduction in Iron Man (2008). The character and Downey's performance have been credited with helping to cement the MCU as a multi-billion-dollar franchise, with Stark's evolution often being considered the defining arc of the series.</p>
 <p style= "margin-left: 300px;">Shown below, Tony Stark aka Iron Man</p>
-<img border="0" alt="TStark" src="images/tstark.jpg" width="500" height="1000">
+<img border="0" alt="TStark" src="images/tstark.jpg" width="500" height="1000000">
 </body>
 </html>
